--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-#尝试创建个人主页
-##这是hgh的个人主页，欢迎访问
-*数学&计算机是新时代的革命*
-#好好学习英语才能有更大的成长空间，不然代码都看不懂
+<!DOCTYPE html>
+<html>
+
+<body>
+
+<!--这是一段注释。注释不会在浏览器中显示。-->
+
+<p>这是华光辉的个人主页</p>
+
+</body>
+</html>
