--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<title>我的第一个 HTML 页面</title>
+</head>
 <body>
-
-<!--这是一段注释。注释不会在浏览器中显示。-->
-
-<p>这是华光辉的个人主页</p>
-
+<p>body Gray 的个人主页</p>
+<p>统计学就是一门玄学</p>
 </body>
 </html>
