--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>我的第一个 HTML 页面</title>
-</head>
+
 <body>
-<p>body Gray 的个人主页</p>
+
+<h1>Gray的个人主页</h1>
+<h2>不想写数学的时候的消遣</h2>
+
+
 <p>统计学就是一门玄学</p>
+
 </body>
 </html>
