--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
-<body>
+<body style="background-color:PowderBlue;">
 
-<h1>Gray的个人主页</h1>
+<h1 style="font-family:verdana;color:red">Gray的个人主页</h1>
 <h2>不想写数学的时候的消遣</h2>
 
 
