--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 
 <p style="font-size:30px">统计学就是一门玄学</p>
-
+  <div class="formula">
+        <label>Fourier变换：</label><span>`f(x)~a_0/2+\sigma`</span>
+    </div>
+  
 </body>
 </html>
