--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
+<!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
 
-<body style="background-color:PowderBlue;">
+h1 {
+  color: white;
+  text-align: center;
+}
 
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+<body>
 <h1 style="font-family:verdana;color:red">Gray的个人主页</h1>
 <h2>不想写数学的时候的消遣</h2>
-
-
 <p style="font-size:30px">统计学就是一门玄学</p>
   <div class="formula">
-        <label>Fourier变换：</label><span>`f(x)~a_0/2+\sigma`</span>
-    </div>
-  
+
 </body>
 </html>
