--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ p {
 </style>
 </head>
 <body>
-<h1 style="font-family:verdana;color:red">Gray的个人主页</h1>
-<h2>不想写数学的时候的消遣</h2>
-<p style="font-size:30px">统计学就是一门玄学</p>
-  <div class="formula">
+<h1>Gray的个人主页</h1>
+<h2 style="font-family:verdana;color:red">不想写数学的时候的消遣</h2>
+<p>统计学就是一门玄学</p>
+ 
 
 </body>
 </html>
