--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@ h1 {
 p {
   font-family: verdana;
   font-size: 20px;
-}
+}  
 </style>
+<!--以上就是css什么的，我也不太清楚-->
 </head>
 <body>
 <h1>Gray的个人主页</h1>
 <h2 style="font-family:verdana;color:red">不想写数学的时候的消遣</h2>
 <p>统计学就是一门玄学</p>
  
-
+<!--学会添加注释,以后有空的时候就可以来创建自己的主页了，这个有意思-->
 </body>
 </html>
