--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript"
+   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+   tex2jax: { inlineMath: [["$","$"],["\(","\)"]] },
+   "HTML-CSS": {
+      linebreaks: { automatic: true }
+   },
+   SVG: { 
+      linebreaks: { automatic: true } 
+   }
+});
+</script>
+  <!--注释一下防止出错-->
 <style>
 body {
   background-color: lightblue;
