--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/javascript"
-   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-   tex2jax: { inlineMath: [["$","$"],["\(","\)"]] },
-   "HTML-CSS": {
-      linebreaks: { automatic: true }
-   },
-   SVG: { 
-      linebreaks: { automatic: true } 
-   }
-});
-</script>
-  <!--注释一下防止出错-->
 <style>
 body {
   background-color: lightblue;
@@ -40,4 +25,20 @@ p {
  
 <!--学会添加注释,以后有空的时候就可以来创建自己的主页了，这个有意思-->
 </body>
+  <!--testmath-->
+  <script type="text/javascript"
+   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+   tex2jax: { inlineMath: [["$","$"],["\(","\)"]] },
+   "HTML-CSS": {
+      linebreaks: { automatic: true }
+   },
+   SVG: { 
+      linebreaks: { automatic: true } 
+   }
+});
+</script>
+  <!--注释一下防止出错-->
 </html>
